--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
-ErrorDocument 404 pages/not-404.html
+RewriteEngine on
+RewriteRule ^about$ about.html [NC]
+
+
+ErrorDocument 404 website/pages/404.html
